# openDAQ_Evaluation_Task

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: CommonUtils.cmake
example_application/: CMakeLists.txt  main.cpp
example_module/: CMakeLists.txt
example_module/include/example_module/: common.h  example_fb.h  example_module.h  iir_filter_fb.h  module_dll.h
example_module/src/: CMakeLists.txt  example_fb.cpp  example_module.cpp  iir_filter_fb.cpp  module_dll.cpp
example_module/tests/: CMakeLists.txt  test_example_module.cpp
